change index to get signalr from cdn

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -91,9 +91,7 @@
   </div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-<!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.2/signalr.min.js" integrity="sha512-Ss3Q9gcwACmPpK77dhMVex9Fe2E2aHEXXCvS4w8heJln9aX0XWJB4atN6sB9R1ykjOen4Aj0TylV9wtxiXdR4g==" crossorigin="anonymous"></script>-->
-<!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.2/signalr.js" integrity="sha512-e1T56eW9d9boBAtzV3lvoDip3g9j3V/kJPscBH61//WkVKfbAJtzDd0LVeNDJWj6quyTi4Bw67PutCVsP4iJIQ==" crossorigin="anonymous"></script>-->
-  <script src="lib/signalr.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.2/signalr.min.js" integrity="sha512-Ss3Q9gcwACmPpK77dhMVex9Fe2E2aHEXXCvS4w8heJln9aX0XWJB4atN6sB9R1ykjOen4Aj0TylV9wtxiXdR4g==" crossorigin="anonymous"></script>
   <script src="js/map.js"></script>
   <script src="js/game.js"></script>
 
