--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -98,7 +98,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const connection = new signalR.HubConnectionBuilder()
-              .withUrl('https://localhost:5001/game')
+              .withUrl('https://hexipro.herokuapp.com/game')
               .configureLogging(signalR.LogLevel.Information)
               .build();
       
