update canvas to resize based on map dimensions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
       <div id="divide-wrapper"></div>
       <main>
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <canvas id="canvas">
       </main>
     </div>
 
