add socket server and Session controller

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hexipro</title>
-    <link rel="stylesheet" href="css/game.css" />
+    <link rel="stylesheet" href="/static/css/game.css" />
   </head>
 
   <body>
@@ -50,7 +50,8 @@
       integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
       crossorigin="anonymous"
     ></script>
-    <script src="js/map.js"></script>
-    <script src="js/game.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/static/map.js"></script>
+    <script src="/static/game.js"></script>
   </body>
 </html>
