break up client game.js into modules

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     ></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/static/map.js"></script>
+    <script src="/static/session.js"></script>
     <script src="/static/game.js"></script>
+    <script src="/static/index.js"></script>
   </body>
 </html>
