--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <div id="details">
       <!-- <div id=""> -->
       <p>
+        <b id="">attack stage: </b>Select one of your tiles to attack with, and click another to take over.
+      </p>
+      <p>
+        <b>allocate stage: </b>Click on your own tiles to power them up for the next round.
+      </p>
+      <p>
         Player: <span id="player">PLAYER</span><br />
         Stage: <span id="stage">STAGE</span><br />
         Power: <span id="power">POWER</span>
