converted server and client to typescript

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -45,33 +45,13 @@
       <button id="resetGame" class="reset-game control">Reset Game</button>
       <!-- </div> -->
     </div>
-    <script
-      src="https://cdn.socket.io/4.6.0/socket.io.min.js"
-      integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-      crossorigin="anonymous"
-    ></script>
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
-    <script src="map.js"></script>
-    <script src="session.js"></script>
-    <script src="game.js"></script>
-    <script src="index.js"></script>
-    <script src="client.js"></script>
-    <script>
-      var gameClient = new Client();
-      gameClient.connect();
-      // gameClient.addHandler("game", function (message) {
-      //   let res = message.x + " " + message.y;
-      //   var ul = document.getElementById("server-messages");
-      //   var li = document.createElement("li");
-      //   li.appendChild(document.createTextNode(res));
-      //   ul.appendChild(li);
-      // });
+    <script src="socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      var exports = {};
     </script>
+    <script src="client.js"></script>
+  </body>
   </body>
 </html>
 
