--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hexi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/game.css" />
+    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" /> -->
   </head>
 
   <body>
@@ -45,13 +47,11 @@
       <button id="resetGame" class="reset-game control">Reset Game</button>
       <!-- </div> -->
     </div>
+
+    <!-- <script src="./jquery/jquery.min.js"></script> -->
+    <!-- <script src="bootstrap/js/bootstrap.bundle.min.js"></script> -->
     <script src="socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript">
-      var exports = {};
-    </script>
     <script src="client.js"></script>
-  </body>
   </body>
 </html>
 
